--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -4,7 +4,7 @@
 		    <div class="short"></div>
 		    {{ config.message }}
 		    <br/>
-			DELIVERY {{ demo.data.deliveryId }} INFO
+			DELIVERY {{ MemorySrvc.get("deliveryId") }} INFO
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-archive"></button>
 			<span class="skinniest"></span>
