--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -64,7 +64,7 @@
 		</div>
 	</div>
 <footer ng-controller="DebugCtrl as debug">
-    <span class="center-t" id="addsToggle" ng-click="page.toggleBanner"> &nbsp; {{ page.toggleMessage }} &nbsp; </span>
+    <span class="center-t" id="addsToggle" ng-click="page.toggleBanner()"> &nbsp; {{ page.toggleMessage }} &nbsp; </span>
 </footer>
 </body>
 </html>
