lots of updates

--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -8,7 +8,7 @@
 			<button class="medium widest dark" ng-click="track.AcceptDelivery()" ng-show="track.accept">
 				Click to accept delivery
 			</button>
-			<img ng-src="{{track.pickSrc}}" class="wide" /><img ng-src="{{track.dropSrc}}" class="wide" ng-show="track.accept" />
+			<img ng-src="{{track.pickSrc}}" width="35%" class="wide" /><img ng-src="{{track.dropSrc}}" width="35%" class="wide" ng-show="track.accept" />
 		    <div id="map-canvas"></div>
             <button ng-click="page.load('app/page/start.html');">
                 !RESET!
