--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -4,7 +4,7 @@
     <div class="tall"></div>
     <div class="tall"></div>
 	<div class="tall center-h">
-		<table class="center-h" style="color: white">
+		<table class="center-t" style="color: white">
 			<tr>
 				<td>F1 App</td>
 				<td>
