--- a/Fetch1/driver/4_drivenVerification/drivenVerification.html
+++ b/Fetch1/driver/4_drivenVerification/drivenVerification.html
@@ -4,7 +4,7 @@
     <div class="tall"></div>
     <div class="tall"></div>
 	<div class="tall center-h">
-		<table class="center-h" style="width: 170px; color: white">
+		<table class="center-t" style="color: white">
 			<tr>
 				<td>F1 App</td>
 				<td>
