--- a/Fetch1/customer/1_requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/1_requestDelivery/requestDelivery.html
@@ -7,7 +7,7 @@
 			<br />
 			<button class="medium skinnier dark" ng-click="demo.data.size='small';" ng-class="demo.data.size==='small' ? 'selected' : 'x'">Small</button>
 			<span class="skinniest"></span>
-			<button class="medium skinnier dark" ng-click="demo.data.size='medium';" ng-class="demo.data.size==='medium' ? 'selected' : 'x'">Medium</button>
+			<button class="medium skinnier dark" ng-click="demo.data.size='medium';" ng-class="demo.data.size==='medium' ? 'selected' : 'x'">Med</button>
 			<span class="skinniest"></span>
 			<button class="medium skinnier dark" ng-click="demo.data.size='large';" ng-class="demo.data.size==='large' ? 'selected' : 'x'">Large</button>
 			<div class="short"></div>
@@ -61,9 +61,9 @@
 			</button>
 			<span class="skinnier"></span>
 			<button class="wide dark" ng-click="special=true;" ng-hide="special">
-				SPECIAL
+				ADD
 				<br />
-				INS.
+				DETAILS
 			</button>
 		</form>
 	</div>
