--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -10,7 +10,7 @@
 			</button>
 			<img ng-src="{{track.pickSrc}}" width="35%" class="wide" /><img ng-src="{{track.dropSrc}}" width="35%" class="wide" ng-show="track.accept" />
 		    <div id="map-canvas"></div>
-            <button ng-click="page.load('app/page/start.html');">
+            <button class="light" ng-click="page.load('app/page/start.html');">
                 !RESET!
             </button>
 		</div>
