--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -1,33 +1,26 @@
-﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'darker'; page.title = 'DELIVERY VERIFICATION';}}</div>
 <div ng-controller="DeliveryCtrl as demo">
     <form name="form">
         <div ng-controller="DeliveryVerificationCtrl as delivery" ng-init="delivery.calculateCost(demo)">
             <div class="short"></div>
             PLEASE VERIFY INFO FOR ACCURACY
             <div class="short"></div>
-            <button class="skinnier medium dark fa fa-archive"></button>
-            <span class="skinniest"></span>
-            <div class="window medium wider">
+            <div class="window medium widest">
                 I have a {{ demo.data.size }} {{ demo.data.weight }} lb package
             </div>
             <div class="short"></div>
-            <button class="skinnier medium dark fa fa-arrow-down"></button>
-            <span class="skinniest"></span>
-            <div class="window medium wider">
+            <div class="window medium widest">
                 Package to be picked up from {{ demo.data.pickup }}
             </div>
             <div class="short"></div>
-            <button class="skinnier medium dark fa fa-arrow-right"></button>
-            <span class="skinniest"></span>
-            <div class="window medium wider">
+            <div class="window medium widest">
                 Package will be delivered to {{ demo.data.delivery }}
             </div>
             <div class="short"></div>
-            <button class="skinnier medium dark fa fa-usd"></button>
-            <span class="skinniest"></span>
-            <div class="window medium wider">
+            <div class="window medium widest center-t">
                 Suggested (${{ demo.data.suggested }})<br/>
-                Your Price: <input name="price" type="text" ng-model="demo.data.price" ng-change="delivery.validatePrice(demo.data.price, demo);" ng-class="(demo.data.price === '') ? 'error' : 'x'" required />
+                <br />
+                Your Price: $<input name="price" type="text" ng-model="demo.data.price" ng-change="delivery.validatePrice(demo.data.price, demo);" ng-class="(demo.data.price === '') ? 'error' : 'x'" required />
             </div>
             <div class="short right-t">I VERIFY THIS</div>
             <button ng-click="page.back();" class="medium wide stop">
@@ -36,7 +29,7 @@
             <span class="skinniest"></span>
 
             <button ng-disabled="(form.price.$invalid)" ng-click="demo.saveData(); page.load('customer/2_5_findDriver/findDriver.html');" class="medium wide light">
-                Confirm
+                CONFIRM
             </button>
         </div>
     </form>
