--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; }}</div>
+﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; page.title = 'DELIVERY REQUEST SENT'; }}</div>
 <div ng-controller="FindDriverCtrl as driver">
     <div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data)">
         <div class="tall"></div>
@@ -10,7 +10,7 @@
         <button ng-click="driver.submit(('Delivery of '+ demo.data.content), (demo.data.price * 100), page);" class="medium wide light" ng-show="driver.ready">
             Pay With Card
         </button>
-        <button ng-click="page.load('app/page/start.html');">
+        <button class="light" ng-click="page.load('app/page/start.html');">
             !RESET!
         </button>
     </div>
