--- a/Fetch1/driver/1_pickupMap/pickupMap.html
+++ b/Fetch1/driver/1_pickupMap/pickupMap.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'darker'; page.title = 'PICK UP MAP'; }}</div>
 <div ng-controller="MapController as map">
 	<div ng-controller="PickupMapControler as pickup">
 		<div ng-controller="DeliveryCtrl as demo" ng-init="pickup.init(demo, page);">
