--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; }}</div>
+﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; page.title = 'DELIVERY'; }}</div>
 <div ng-controller="DeliveryCtrl as demo">
     <div ng-controller="startControler as start" ng-init="start.init(demo, page)">
         <div class="short"></div>
