lots of updates

--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'dark city'; page.title = 'VERIFY SHIPMENT' }}</div>
+﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'dark city'; page.title = 'RATE YOUR TRANSACTION' }}</div>
 <div ng-controller="DeliveredControler as del">
     <div class="tall"></div>
     <div class="tall"></div>
