--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -1,6 +1,6 @@
 ﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'darker'; page.title = 'DELIVERY REQUEST SENT'; }}</div>
 <div ng-controller="FindDriverCtrl as driver">
-    <div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data)">
+    <div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data, page)">
         <div class="tall"></div>
 
         {{ driver.message }}
