this is all the things for V1

--- a/Fetch1/customer/1_requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/1_requestDelivery/requestDelivery.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'darker'; page.title = 'MY DELIVERY INFORMATION'; }}</div>
+﻿<div class="hidden">{{ page.disableBack = false; page.theme = 'darker'; page.title = 'MY DELIVERY INFORMATION'; }}</div>
 <div ng-controller="DeliveryCtrl as demo">
 	<div ng-controller="RequestDeliveryController as delivery" ng-init="delivery.init(demo);">
 		<form name="form">
