--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -30,7 +30,11 @@
                 </td>
             </tr>
         </table>
-        <br/>
+        <br />
+        <button ng-click="page.tip()" class="tall widest dark">
+            KEEP THIS APP FREE WITH A TIP
+        </button>
+        <br />
         <textarea style="width: 100%;" placeholder="Comments"></textarea>
     </div>
     <br />
