--- a/Fetch1/driver/4_drivenVerification/drivenVerification.html
+++ b/Fetch1/driver/4_drivenVerification/drivenVerification.html
@@ -33,6 +33,10 @@
         <br/>
         <textarea style="width: 100%;" placeholder="Comments"></textarea>
     </div>
+    <br/>
+    <button ng-click="page.tip()" class="tall widest dark">
+        KEEP THIS APP FREE WITH A TIP
+    </button>
     <br />
 	<button ng-click="page.load('app/page/start.html');" class="short wide stop">NO THANKS</button>
 	<span class="skinnier"></span>
