--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -1,44 +1,46 @@
 ﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'dark city'; page.title = 'RATE YOUR TRANSACTION' }}</div>
 <div ng-controller="DeliveredControler as del">
-    <div class="tall"></div>
-    <div class="tall"></div>
-    <div class="tall"></div>
-    <div class="tall center-h">
-        <table class="center-t" style="color: white">
-            <tr>
-                <td>F1 App</td>
-                <td>
-                    1
-                    <input name="app" type="radio" value="1"/>
-                    <input name="app" type="radio" value="2"/>
-                    <input name="app" type="radio" value="3"/>
-                    <input name="app" type="radio" value="4"/>
-                    <input name="app" type="radio" value="5"/>
-                    5
-                </td>
-            </tr>
-            <tr>
-                <td>F1 Driver</td>
-                <td>
-                    1
-                    <input name="driver" type="radio" value="1"/>
-                    <input name="driver" type="radio" value="2"/>
-                    <input name="driver" type="radio" value="3"/>
-                    <input name="driver" type="radio" value="4"/>
-                    <input name="driver" type="radio" value="5"/>
-                    5
-                </td>
-            </tr>
-        </table>
+    <div ng-controller="DeliveryCtrl as demo" ng-init="start.init(demo)">
+        <div class="tall"></div>
+        <div class="tall"></div>
+        <div class="tall"></div>
+        <div class="tall center-h">
+            <table class="center-t" style="color: white">
+                <tr>
+                    <td>F1 App</td>
+                    <td>
+                        1
+                        <input name="app" type="radio" value="1" />
+                        <input name="app" type="radio" value="2" />
+                        <input name="app" type="radio" value="3" />
+                        <input name="app" type="radio" value="4" />
+                        <input name="app" type="radio" value="5" />
+                        5
+                    </td>
+                </tr>
+                <tr>
+                    <td>F1 Driver</td>
+                    <td>
+                        1
+                        <input name="driver" type="radio" value="1" />
+                        <input name="driver" type="radio" value="2" />
+                        <input name="driver" type="radio" value="3" />
+                        <input name="driver" type="radio" value="4" />
+                        <input name="driver" type="radio" value="5" />
+                        5
+                    </td>
+                </tr>
+            </table>
+            <br />
+            <button ng-click="page.tip()" class="tall widest dark">
+                KEEP THIS APP FREE WITH A TIP
+            </button>
+            <br />
+            <textarea style="width: 100%;" placeholder="Comments"></textarea>
+        </div>
         <br />
-        <button ng-click="page.tip()" class="tall widest dark">
-            KEEP THIS APP FREE WITH A TIP
-        </button>
-        <br />
-        <textarea style="width: 100%;" placeholder="Comments"></textarea>
+        <button ng-click="page.load('app/page/start.html');" class="short wide stop">NO THANKS</button>
+        <span class="skinnier"></span>
+        <button ng-click="page.load('app/page/start.html');" class="short wide light">RATE</button>
     </div>
-    <br />
-	<button ng-click="page.load('app/page/start.html');" class="short wide stop">NO THANKS</button>
-	<span class="skinnier"></span>
-	<button ng-click="page.load('app/page/start.html');" class="short wide light">RATE</button>
 </div>
