change to allow no number in rating

--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -27,8 +27,9 @@
 			</div>
 			<div class="short"></div>
 		    <div class="window medium widest">
-                {{demo.data.price}}
-		        Payment ${{ (demo.data.price - (demo.data.price * config.driverCut) - 0.30).toFixed(2); }}
+		        {{demo.data.price}}
+                <!--one cent is added here incase of rounding loss-->
+		        Payment ${{ (demo.data.price - (demo.data.price * config.driverCut) - 0.31).toFixed(2); }}
 		    </div>
 			<button ng-click="page.load('driver/1_pickupMap/pickupMap.html');" class="medium wide stop">
 				REJECT
