--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" ng-app="Fetch1App" ng-controller="PageCtrl as page" ng-class="page.theme">
 <head>
 	<meta charset="utf-8">
@@ -64,7 +64,7 @@
 		</div>
 	</div>
 <footer ng-controller="DebugCtrl as debug">
-    <span class="center-t" id="addsToggle" ng-click="page.toggleBanner()" ng-class="(page.toggleMessage === '') ? 'hidden' : 'x'"> &nbsp; {{ page.toggleMessage }} &nbsp; </span>
+    <span class="center-t" id="addsToggle" ng-click="page.toggleBanner()" ng-show="page.hasCameraAndGPS()"> &nbsp; {{ page.toggleMessage }} &nbsp; </span>
 </footer>
 </body>
 </html>
