--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -20,7 +20,7 @@
             <div class="window medium widest">
                 Suggested (${{ demo.data.suggested }})<br/>
                 <br />
-                Your Price: $<input name="price" type="text" ng-model="demo.data.price" ng-change="delivery.validatePrice(demo.data.price, demo);" class="skinniest" ng-class="(demo.data.price === '') ? 'error' : 'x'" required />
+                Your Price: $<input name="price" type="text" ng-model="demo.data.price" ng-change="delivery.validatePrice(demo.data.price, demo);" class="skinnier" ng-class="(demo.data.price === '') ? 'error' : 'x'" required />
             </div>
             <div class="short right-t">I VERIFY THIS</div>
             <button ng-click="page.back();" class="medium wide stop">
