--- a/Fetch1/driver/4_drivenVerification/drivenVerification.html
+++ b/Fetch1/driver/4_drivenVerification/drivenVerification.html
@@ -41,6 +41,6 @@
         </div>
         <button ng-click="page.load('app/page/start.html');" class="short wide stop">NO THANKS</button>
         <span class="skinnier"></span>
-        <button ng-click="driv.rate(driver, notes)" class="short wide light">RATE</button>
+        <button ng-click="driv.rate(driver, notes, page)" class="short wide light">RATE</button>
     </div>
 </div>
