removed all the resets

--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -10,9 +10,9 @@
 			</button>
 			<img ng-src="{{track.pickSrc}}" width="35%" class="wide" /><img ng-src="{{track.dropSrc}}" width="35%" class="wide" ng-show="track.accept" />
 		    <div id="map-canvas"></div>
-            <button class="light" ng-click="page.load('app/page/start.html');">
+            <!--<button class="light" ng-click="page.load('app/page/start.html');">
                 !RESET!
-            </button>
+            </button>-->
 		</div>
 	</div>
 </div>
