--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -10,8 +10,8 @@
         <button ng-click="driver.submit(('Delivery of '+ demo.data.content), (demo.data.price * 100.00), page);" class="medium wide light" ng-show="driver.ready">
             Pay With Card
         </button>
-        <button class="light" ng-click="page.load('app/page/start.html');">
+        <!--<button class="light" ng-click="page.load('app/page/start.html');">
             !RESET!
-        </button>
+        </button>-->
     </div>
 </div>
