--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -21,8 +21,8 @@
         <img id="pickImg" ng-src="{{ start.pickSrc }}" imageonload imageonloadfunction="start.onPickLoad()" class="wide"/>
         <img id="dropImg" ng-src="{{ start.dropSrc }}" imageonload imageonloadfunction="start.onDropLoad()" class="wide"/>
 
-        <button class="light" ng-click="page.load('app/page/start.html');">
+        <!--<button class="light" ng-click="page.load('app/page/start.html');">
             !RESET!
-        </button>
+        </button>-->
     </div>
 </div>
