--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -1,12 +1,10 @@
 ﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'dark city'; page.title = 'RATE YOUR TRANSACTION' }}</div>
 <div ng-controller="DeliveredControler as del">
     <div ng-controller="DeliveryCtrl as demo" ng-init="start.init(demo, page)">
-        <div class="tall"></div>
-        <div class="tall"></div>
-        <div class="tall"></div>
+        <div class="tallish"></div>
         <div class="tall center-h">
             <br />
-            <button ng-click="page.tip()" class="tall widest dark">
+            <button ng-click="page.tip()" class="tall widest lighter">
             KEEP THIS APP FREE WITH A TIP
             </button>
             <br />
